# LearnOpenGL

./: CMakeLists.txt
include/common/: image.hpp  stopwatch.hpp  utility.hpp
include/graphics/: camera.hpp  cube.hpp  light.hpp  mesh.hpp  model.hpp  shader_program.hpp  texture.hpp  transform.hpp  window.hpp
include/graphics/lighting/: directional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
include/graphics/mesh/: cube.hpp  mesh.hpp
include/graphics/types/: color.hpp  light_attenuation.hpp  light_cutoff.hpp  light_properties.hpp  material.hpp  transform.hpp
include/shaders/: master.hpp  shaders.hpp
resources/shaders/: cube.frag  cube.vert  light.frag  light.vert  normal.frag  shader.frag  shader.vert
shaders/: shader.frag  shader.vert
source/: main.cpp
source/common/: image.cpp  utility.cpp
source/graphics/: camera.cpp  cube.cpp  light.cpp  mesh.cpp  model.cpp  shader_program.cpp  texture.cpp  transform.cpp  window.cpp
source/graphics/lighting/: directional_light.cpp  point_light.cpp  spot_light.cpp
source/graphics/mesh/: cube.cpp  mesh.cpp
source/shaders/: master.cpp
